Fix disalog width overflow

--- a/assets/packages/adminbasics/scss/000-lime-admin-common.scss
+++ b/assets/packages/adminbasics/scss/000-lime-admin-common.scss
@@ -13,6 +13,12 @@
 @import "../../../vendor/twbs/bootstrap/scss/root";
 @import "../../bootstrap_5/scss/customizations";
 
+@media screen and (min-width: 768px) {
+    .modal-dialog {
+        width: unset;
+    }
+}
+
 #ls-loading {
     width: 100%;
     height: 100%;
@@ -686,7 +692,7 @@ html {
   text-align: center;
   padding: 0px;
   height: 75%;
-  width: 100%;    
+  width: 100%;
 }
 
 .welcome .card-body img {
